// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works correctly with custom client index entry point 1`] = `
"
import clientIndex from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testClientIndex.js\\"
export default clientIndex
"
`;

exports[`works correctly with default client index entry point 1`] = `
"
import clientIndex from \\"resolve-runtime/lib/common/defaults/client-index.js\\"
export default clientIndex
"
`;
